<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>norbit_wbms_driver</name>
  <version>0.0.0</version>
  <description>Driver for Norbit Multibeam/Forward Looking Sonar</description>
  <maintainer email="liling@kth.se">Li Ling</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
